Merge evaluationOutputs and seriesStates as one